mengedit file about me

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi in maxime explicabo eaque cupiditate hic odit quia rem, quasi consequuntur?</p>
+            <p>Aku adalah anak yang suka sepak bola. Tapi cita citaku menjadi seorang progamming. Mungkin terlihat aneh. Tapi, itulah aku.</p>
           </div>
           <div class="col-md-4">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vero doloremque quidem illo illum voluptates est repellat explicabo laboriosam architecto!</p>
