mengedit my galeri

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>Aku adalah anak yang suka sepak bola. Tapi cita citaku menjadi seorang progamming. Mungkin terlihat aneh. Tapi, itulah aku.</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti vero doloremque quidem illo illum voluptates est repellat explicabo laboriosam architecto!</p>
+            <p>Saat ini aku sedang berjuang untuk mengejar cita-citaku. Banyak sekali tantangan demi tantangan yang aku hadapi. Tapi aku harus tetap semangat.</p>
           </div>
         </div>
       </div>
@@ -97,7 +97,7 @@
             <div class="card">
               <img src="project/fotis-fotopoulos-6sAl6aQ4OWI-unsplash.jpg" class="card-img-top" alt="Project-1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Perangkat lunak adalah dasar teknologi modern, memungkinkan segala hal dari aplikasi ponsel cerdas hingga keamanan siber. Pengembang merancang, kode, dan uji aplikasi, memungkinkan inovasi dan konektivitas digital. Selain itu, perangkat lunak juga memfasilitasi otomatisasi, analisis data, dan cloud computing. Ini adalah pilar penting dalam dunia teknologi saat ini.</p>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
             <div class="card">
               <img src="project/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg" class="card-img-top" alt="Project-2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Selain itu, perangkat lunak juga memfasilitasi otomatisasi berbagai tugas, memungkinkan analisis data yang mendalam, dan mendukung cloud computing, yang mengubah cara data dan aplikasi disimpan dan diakses. Semua ini menjadikan perangkat lunak sebagai fondasi penting bagi perkembangan teknologi saat ini.</p>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
             <div class="card">
               <img src="project/possessed-photography-U3sOwViXhkY-unsplash.jpg" class="card-img-top" alt="Project-3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up</p>
+                <p class="card-text">Kecerdasan Buatan (AI) adalah teknologi yang memungkinkan komputer untuk belajar dan menjalankan tugas seperti manusia. Dari asisten virtual hingga mobil otonom, AI memiliki berbagai aplikasi dan berpotensi mengubah cara kita hidup dan bekerja. Meskipun menjanjikan, AI juga menghadirkan tantangan etika dan keamanan.</p>
               </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
             <div class="card">
               <img src="project/possessed-photography-g29arbbvPjo-unsplash.jpg" class="card-img-top" alt="Project-4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up.the bulk of the card's content.</p>
+                <p class="card-text">Selain itu, AI terus berkembang dan menjadi inti dari banyak inovasi teknologi, termasuk analisis data yang mendalam, peningkatan otomatisasi dalam industri, dan kemampuan untuk membantu dalam pengambilan keputusan yang lebih cerdas. AI juga membuka pintu bagi penelitian dalam robotika, pemrosesan bahasa alami, dan pengenalan wajah, dengan dampak besar di berbagai sektor, termasuk kesehatan, keuangan, dan manufaktur. AI adalah salah satu tren utama dalam dunia teknologi modern.</p>
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
             <div class="card">
               <img src="project/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="card-img-top" alt="Project-5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up.the bulk of the card's content.</p>
+                <p class="card-text">Perangkat lunak adalah fondasi yang memungkinkan pengembangan dan implementasi teknologi Kecerdasan Buatan (AI), termasuk pelatihan model, pengolahan data, dan penciptaan antarmuka pengguna. Perangkat lunak memainkan peran kunci dalam penggabungan AI dalam berbagai aplikasi.</p>
               </div>
             </div>
           </div>
