--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4" data-aos="fade-right"  data-aos-duration="1000">
+          <div class="col-md-4" data-aos="fade-right">
             <p>Aku adalah anak yang suka sepak bola. Tapi cita citaku menjadi seorang progamming. Mungkin terlihat aneh. Tapi, itulah aku.</p>
           </div>
-          <div class="col-md-4" data-aos="fade-left"  data-aos-duration="1000"  data-aos-delay="200">
+          <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
             <p>Saat ini aku sedang berjuang untuk mengejar cita-citaku. Banyak sekali tantangan demi tantangan yang aku hadapi. Tapi aku harus tetap semangat.</p>
           </div>
         </div>
@@ -87,12 +87,12 @@
     </section>
     <!-- end about -->
 
-    <!-- galeri-->
+    <!-- project-->
     <section id="galeri">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Galeri</h2>
+            <h2>My Project</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -100,39 +100,54 @@
             <div class="card" data-aos="flip-left" data-aos-duration="500">
               <img src="project/fotis-fotopoulos-6sAl6aQ4OWI-unsplash.jpg" class="card-img-top" alt="Project-1" />
               <div class="card-body">
-                <p class="card-text">Perangkat lunak adalah dasar teknologi modern, memungkinkan segala hal dari aplikasi ponsel cerdas hingga keamanan siber. Pengembang merancang, kode, dan uji aplikasi, memungkinkan inovasi dan konektivitas digital. Selain itu, perangkat lunak juga memfasilitasi otomatisasi, analisis data, dan cloud computing. Ini adalah pilar penting dalam dunia teknologi saat ini.</p>
+                <p class="card-text">
+                  Perangkat lunak adalah dasar teknologi modern, memungkinkan segala hal dari aplikasi ponsel cerdas hingga keamanan siber. Pengembang merancang, kode, dan uji aplikasi, memungkinkan inovasi dan konektivitas digital. Selain
+                  itu, perangkat lunak juga memfasilitasi otomatisasi, analisis data, dan cloud computing. Ini adalah pilar penting dalam dunia teknologi saat ini.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left"  data-aos-duration="500"  data-aos-delay="100">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
               <img src="project/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg" class="card-img-top" alt="Project-2" />
               <div class="card-body">
-                <p class="card-text">Selain itu, perangkat lunak juga memfasilitasi otomatisasi berbagai tugas, memungkinkan analisis data yang mendalam, dan mendukung cloud computing, yang mengubah cara data dan aplikasi disimpan dan diakses. Semua ini menjadikan perangkat lunak sebagai fondasi penting bagi perkembangan teknologi saat ini.</p>
+                <p class="card-text">
+                  Selain itu, perangkat lunak juga memfasilitasi otomatisasi berbagai tugas, memungkinkan analisis data yang mendalam, dan mendukung cloud computing, yang mengubah cara data dan aplikasi disimpan dan diakses. Semua ini
+                  menjadikan perangkat lunak sebagai fondasi penting bagi perkembangan teknologi saat ini.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left"  data-aos-duration="500"  data-aos-delay="200">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
               <img src="project/possessed-photography-U3sOwViXhkY-unsplash.jpg" class="card-img-top" alt="Project-3" />
               <div class="card-body">
-                <p class="card-text">Kecerdasan Buatan (AI) adalah teknologi yang memungkinkan komputer untuk belajar dan menjalankan tugas seperti manusia. Dari asisten virtual hingga mobil otonom, AI memiliki berbagai aplikasi dan berpotensi mengubah cara kita hidup dan bekerja. Meskipun menjanjikan, AI juga menghadirkan tantangan etika dan keamanan.</p>
+                <p class="card-text">
+                  Kecerdasan Buatan (AI) adalah teknologi yang memungkinkan komputer untuk belajar dan menjalankan tugas seperti manusia. Dari asisten virtual hingga mobil otonom, AI memiliki berbagai aplikasi dan berpotensi mengubah cara
+                  kita hidup dan bekerja.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left"  data-aos-duration="500"  data-aos-delay="300">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
               <img src="project/possessed-photography-g29arbbvPjo-unsplash.jpg" class="card-img-top" alt="Project-4" />
               <div class="card-body">
-                <p class="card-text">Selain itu, AI terus berkembang dan menjadi inti dari banyak inovasi teknologi, termasuk analisis data yang mendalam, peningkatan otomatisasi dalam industri, dan kemampuan untuk membantu dalam pengambilan keputusan yang lebih cerdas. AI juga membuka pintu bagi penelitian dalam robotika, pemrosesan bahasa alami, dan pengenalan wajah, dengan dampak besar di berbagai sektor, termasuk kesehatan, keuangan, dan manufaktur. AI adalah salah satu tren utama dalam dunia teknologi modern.</p>
+                <p class="card-text">
+                  Selain itu, AI terus berkembang dan menjadi inti dari banyak inovasi teknologi, termasuk analisis data yang mendalam, peningkatan otomatisasi dalam industri, dan kemampuan untuk membantu dalam pengambilan keputusan yang
+                  lebih cerdas.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left"  data-aos-duration="500"  data-aos-delay="400">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
               <img src="project/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="card-img-top" alt="Project-5" />
               <div class="card-body">
-                <p class="card-text">Perangkat lunak adalah fondasi yang memungkinkan pengembangan dan implementasi teknologi Kecerdasan Buatan (AI), termasuk pelatihan model, pengolahan data, dan penciptaan antarmuka pengguna. Perangkat lunak memainkan peran kunci dalam penggabungan AI dalam berbagai aplikasi.</p>
+                <p class="card-text">
+                  Perangkat lunak adalah fondasi yang memungkinkan pengembangan dan implementasi teknologi Kecerdasan Buatan (AI), termasuk pelatihan model, pengolahan data, dan penciptaan antarmuka pengguna. Perangkat lunak memainkan peran
+                  kunci dalam penggabungan AI dalam berbagai aplikasi.
+                </p>
               </div>
             </div>
           </div>
@@ -147,6 +162,70 @@
       </svg>
     </section>
     <!-- end project -->
+
+    <!-- galeri -->
+    <section id="gallery">
+      <div class="container">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2>Gallery</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_01_2023.jpg" alt="Gambar-1" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_02_2023.jpg" alt="Gambar-2" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_03_2023.jpg" alt="Gambar-3" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_04_2023.jpg" alt="Gambar-4" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_05_2023.jpg" alt="Gambar-5" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_06_2023.jpg" alt="Gambar-6" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_07_2023.jpg" alt="Gambar-7" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_08_2023.jpg" alt="Gambar-8" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_09_2023.jpg" alt="Gambar-9" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img src="gallery/foto_10_2023.jpg" alt="Gambar-10" class="img-fluid">
+              </a>
+            </div>
+          </div>
+      </div>
+    </section>
+    <!-- end galeri -->
 
     <!-- contact -->
     <section id="contact">
@@ -203,11 +282,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init( {
+      AOS.init({
         once: true,
+        duration: 2000,
       });
     </script>
 
