--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#galeri">Galeri</a>
+              <a class="nav-link" href="#galeri">Project</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -49,7 +49,7 @@
     <section class="jumbotron text-center">
       <img src="img/20231018_110642.jpg" alt="Havid Baihaqi" width="200" img-thumbnail class="rounded-circle" />
       <h1 class="display-4 mt-3">Hello, world!</h1>
-      <p class="lead">Kehidupan | tantangan teknologi</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -166,63 +166,63 @@
     <!-- galeri -->
     <section id="gallery">
       <div class="container">
-          <div class="row text-center mb-3">
-            <div class="col">
-              <h2>Gallery</h2>
-            </div>
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
           </div>
-          <div class="row">
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_01_2023.jpg" alt="Gambar-1" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_02_2023.jpg" alt="Gambar-2" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_03_2023.jpg" alt="Gambar-3" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_04_2023.jpg" alt="Gambar-4" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_05_2023.jpg" alt="Gambar-5" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_06_2023.jpg" alt="Gambar-6" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_07_2023.jpg" alt="Gambar-7" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_08_2023.jpg" alt="Gambar-8" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_09_2023.jpg" alt="Gambar-9" class="img-fluid">
-              </a>
-            </div>
-            <div class="col-md-3">
-              <a href="#">
-                <img src="gallery/foto_10_2023.jpg" alt="Gambar-10" class="img-fluid">
-              </a>
-            </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_01_2023.jpg" alt="Gambar-1" class="img-fluid gallery-img" />
+            </a>
           </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_02_2023.jpg" alt="Gambar-2" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_03_2023.jpg" alt="Gambar-3" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_04_2023.jpg" alt="Gambar-4" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_05_2023.jpg" alt="Gambar-5" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_06_2023.jpg" alt="Gambar-6" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_07_2023.jpg" alt="Gambar-7" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_08_2023.jpg" alt="Gambar-8" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_09_2023.jpg" alt="Gambar-9" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="gallery/foto_10_2023.jpg" alt="Gambar-10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <!-- end galeri -->
@@ -284,11 +284,32 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
+      const galleryImage = document.querySelectorAll(".gallery-img");
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
       AOS.init({
         once: true,
         duration: 2000,
       });
     </script>
+
+    <!-- Awal GSAP -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+
+    <script>
+      //list as many as you'd like
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", {duration: 2, delay: 1.5, text: "Kehidupan | Tantangan Teknologi" })
+      gsap.from(".jumbotron img", { duration: 1, rotateY: 360, opacity: 0 });
+      gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
+      gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: "back" });
+    </script>
+    <!-- end GSAP -->
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxlBApkN-XmXig0YHBeKKFGSm-uO-L4EKnR_XUguqpSNrhh-E9tf_7itBuhwGxxhj2R/exec";
