memperbaiki project dan profil/home

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <a class="nav-link" href="#galeri">Project</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#galeri">Gallery</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
@@ -48,7 +51,7 @@
     <!-- class="rounded-circle -->
     <section class="jumbotron text-center">
       <img src="img/20231018_110642.jpg" alt="Havid Baihaqi" width="200" img-thumbnail class="rounded-circle" />
-      <h1 class="display-4 mt-3">Hello, world!</h1>
+      <h1 class="display-4 mt-3">Havid Baihaqi</h1>
       <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -101,8 +104,7 @@
               <img src="project/fotis-fotopoulos-6sAl6aQ4OWI-unsplash.jpg" class="card-img-top" alt="Project-1" />
               <div class="card-body">
                 <p class="card-text">
-                  Perangkat lunak adalah dasar teknologi modern, memungkinkan segala hal dari aplikasi ponsel cerdas hingga keamanan siber. Pengembang merancang, kode, dan uji aplikasi, memungkinkan inovasi dan konektivitas digital. Selain
-                  itu, perangkat lunak juga memfasilitasi otomatisasi, analisis data, dan cloud computing. Ini adalah pilar penting dalam dunia teknologi saat ini.
+                  Perangkat lunak adalah dasar teknologi modern, memungkinkan segala hal dari aplikasi ponsel cerdas hingga keamanan siber. Pengembang merancang, kode, dan uji aplikasi, memungkinkan inovasi dan konektivitas digital.
                 </p>
               </div>
             </div>
@@ -112,8 +114,7 @@
               <img src="project/fotis-fotopoulos-DuHKoV44prg-unsplash.jpg" class="card-img-top" alt="Project-2" />
               <div class="card-body">
                 <p class="card-text">
-                  Selain itu, perangkat lunak juga memfasilitasi otomatisasi berbagai tugas, memungkinkan analisis data yang mendalam, dan mendukung cloud computing, yang mengubah cara data dan aplikasi disimpan dan diakses. Semua ini
-                  menjadikan perangkat lunak sebagai fondasi penting bagi perkembangan teknologi saat ini.
+                  Selain itu, perangkat lunak juga memfasilitasi otomatisasi berbagai tugas, memungkinkan analisis data yang mendalam, dan mendukung cloud computing, yang mengubah cara data dan aplikasi disimpan dan diakses.
                 </p>
               </div>
             </div>
@@ -123,7 +124,7 @@
               <img src="project/possessed-photography-U3sOwViXhkY-unsplash.jpg" class="card-img-top" alt="Project-3" />
               <div class="card-body">
                 <p class="card-text">
-                  Kecerdasan Buatan (AI) adalah teknologi yang memungkinkan komputer untuk belajar dan menjalankan tugas seperti manusia. Dari asisten virtual hingga mobil otonom, AI memiliki berbagai aplikasi dan berpotensi mengubah cara
+                  Kecerdasan Buatan (AI) adalah teknologi yang memungkinkan komputer untuk belajar dan menjalankan tugas seperti manusia. AI memiliki berbagai aplikasi dan berpotensi mengubah cara
                   kita hidup dan bekerja.
                 </p>
               </div>
@@ -145,14 +146,47 @@
               <img src="project/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="card-img-top" alt="Project-5" />
               <div class="card-body">
                 <p class="card-text">
-                  Perangkat lunak adalah fondasi yang memungkinkan pengembangan dan implementasi teknologi Kecerdasan Buatan (AI), termasuk pelatihan model, pengolahan data, dan penciptaan antarmuka pengguna. Perangkat lunak memainkan peran
-                  kunci dalam penggabungan AI dalam berbagai aplikasi.
+                  Perangkat lunak adalah fondasi yang memungkinkan pengembangan dan implementasi teknologi Kecerdasan Buatan (AI), termasuk pelatihan model, pengolahan data, dan penciptaan antarmuka pengguna. 
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <section id="my-keyboards">
+        <div class="container">
+          <div class="row text-center mb-3">
+            <div class="col">
+              <h2>My Keyboard</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="keyboard-box">
+                <h4 class="keyboard-name">Keyboard</h4>
+                <img src="img/download (1).jpeg" alt="Keyboard" class="keyboard-img" />
+                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="keyboard-box">
+                <h4 class="keyboard-name">Keyboard 2</h4>
+                <img src="img/download (2).jpeg" alt="Keyboard-2" class="keyboard-img" />
+                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-3">
+              <div class="keyboard-box">
+                <h4 class="keyboard-name">Keyboard 3</h4>
+                <img src="img/download (3).jpeg" alt="Keyboard-3" class="keyboard-img" />
+                <a href="#" class="btn btn-light keyboard-detail-button">Show Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#e2edff"
@@ -164,7 +198,7 @@
     <!-- end project -->
 
     <!-- galeri -->
-    <section id="gallery">
+    <!-- <section id="gallery">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -224,7 +258,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- end galeri -->
 
     <!-- contact -->
@@ -304,7 +338,7 @@
     <script>
       //list as many as you'd like
       gsap.registerPlugin(TextPlugin);
-      gsap.to(".lead", {duration: 2, delay: 1.5, text: "Kehidupan | Tantangan Teknologi" })
+      gsap.to(".lead", { duration: 2, delay: 1.5, text: "Kehidupan | Tantangan Teknologi" });
       gsap.from(".jumbotron img", { duration: 1, rotateY: 360, opacity: 0 });
       gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
       gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: "back" });
@@ -338,6 +372,15 @@
             console.log("Success!", response);
           })
           .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
+
+    <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+      VanillaTilt.init(document.querySelectorAll(".keyboard-box"), {
+        max: 25,
+        speed: 400,
+        glare: true,
       });
     </script>
   </body>
